# modern-python-skill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENCE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/modern_python_skill/: cli.py  main.py
src/modern_python_skill/skill/: SKILL.md
tests/: test_cli.py
